# trpc

./: .gitignore  README.md  pyproject.toml
scripts/: e2e.py  get_visualizations.py  process.py  run_mock_stream.py  test_all_channel.py  test_data_to_drive.py  test_i2c.py  test_i2c_comms.py  train.py
tprc/: __init__.py  gpio_read  processor.py  streamer.py
trpc/: __init__.py  controller.py  driver.py  processor.py  streamer.py
trpc/utils/: logger.py
