[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trpc"
version = "0.1.0"
authors = [
    { name = "Jacob Yao", email = "yao.ja@northeastern.edu" },
    { name = "Cassidy Zeng", email = "zeng.cas@hortheastern.edu"},
    { name = "Cooper Bennett", email = "bennett.co@northeastern.edu"},
    { name = "Thane Gallo", email = "gallo.th@northeastern.edu"},
]
readme = "README.md"
requires-python = ">=3.8.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "libemg",
    "gpiozero",
    "pigpio",
]

[project.optional-dependencies]
dev = [
    "PyWavelets",
    "bluepy",
    "alive-progress",
]

[tool.setuptools.packages.find]
include = ["trpc", "trpc.*"]

[tool.black]
line-length = 120
target-version = ["py38"]
